--- a/Store.html
+++ b/Store.html
@@ -33,7 +33,7 @@
    
     <div class="product">
         <div class="product-content">
-        <img class="proudct-image" src="images/eye.jpg">
+        <img class="proudct-image" src="images/Ramy.png">
 
 
 
