--- a/Store.html
+++ b/Store.html
@@ -33,9 +33,9 @@
    
     <div class="product">
         <div class="product-content">
-        <img class="proudct-image" src="images/Ramy.png">
+        <img class="proudct-image" src="images/holding-phone.jpg">
 
-        
+
 
 
 
